--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -2,5 +2,6 @@
     "@@locale":"es",
     "appTitle":"TMDB movie",
     "nowLoading": "Cargando...",
-    "movie":"pelicula"
+    "movie":"pelicula",
+    "someErrorHappend":"Algun Error Sucedió"
 }
